--- a/Flappy/Assembly-CSharp.csproj
+++ b/Flappy/Assembly-CSharp.csproj
@@ -63,8 +63,16 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CreatePipes.cs" />
     <Compile Include="Assets\Scripts\DeletePipes.cs" />
-    <Compile Include="Assets\Scripts\Movecamera.cs" />
+    <Compile Include="Assets\Scripts\EndScreen.cs" />
+    <Compile Include="Assets\Scripts\FlyBird.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\PlengBird.cs" />
+    <Compile Include="Assets\Scripts\PressToPlay.cs" />
+    <Compile Include="Assets\Scripts\PressToReady.cs" />
+    <Compile Include="Assets\Scripts\PressToReReady.cs" />
     <Compile Include="Assets\Scripts\RefreshGround.cs" />
+    <Compile Include="Assets\Scripts\ScoreAdd.cs" />
+    <Compile Include="Assets\Scripts\ScoreBoard.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/Erans/dit/Flappy/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
